[project]
name = "kalshi-api"
version = "0.1.0"
description = "Kalshi Cleaned API"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0"
]

[tool.setuptools]
packages = ["kalshi_api"]
